docs: improve embed instructions, use store locator keyword, fix header on mobile (#36)
* fix: fixes scrolling behavior and removes name from edit form

closses #26 and #30

* fix: removed column name from user

* feature: added no_accidental_zoom param

* fix: fixed artifacts from removing name col

also added no_accidental_zoom descriptoin to embed instructions

* fix: removed User.name from seeds.rb

* Use store locator keyword

* Improve embed instructions

* Docs

* Add general link to doc

* Hide docs link on mobile

* Fix

* Better Englich

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -31,7 +31,15 @@ p {
 }
 
 code {
-  font-family: monospace;
+  @apply font-mono text-sm bg-gray-100 py-1
+}
+
+.code--multiline {
+  @apply p-4 rounded my-4 w-full bg-gray-900 text-white
+}
+
+.code--multiline > code {
+  @apply bg-transparent
 }
 
 /* Emphasis */
@@ -92,11 +100,6 @@ code {
 
 .checkbox-label--default {
   @apply uppercase text-gray-700 text-xs
-}
-
-/* Utils */
-.hidden {
-  display: none;
 }
 
 /* Mapbox */
